name:                htrade
version:             0.1.0.0
synopsis:            Bitcoin trading platform.
homepage:            https://github.com/davnils/htrade
license:             BSD3
license-file:        LICENSE
author:              David Nilsson
maintainer:          nilsson.dd+htrade@gmail.com
category:            HTrade
build-type:          Simple
cabal-version:       >=1.8

-- Shared library and installed executables

library
  hs-source-dirs:    src
  exposed-modules:   HTrade.Shared.Utils, HTrade.Shared.Types
  ghc-options:       -Wall
  build-depends:     base == 4.*,
                     pipes == 4.0.*,
                     pipes-binary == 0.2.*,
                     pipes-network == 0.6.*,
                     pipes-safe == 2.0.*,
                     binary == 0.7.*,
                     bytestring >= 0.9.2.1 && < 0.11,
                     network == 2.4.*,
                     stm == 2.4.*,
                     pipes-concurrency == 2.0.*,
                     mtl == 2.1.*,
                     containers >= 0.4 && < 0.6,
                     ghc-prim >= 0.2 && < 0.4,
                     async == 2.0.*,
                     random == 1.0.*,
                     time == 1.4.*,
                     transformers-base == 0.4.*,
                     monad-control == 0.3.*

executable htrade-backend
  hs-source-dirs:    src
  main-is:           HTrade/Backend/Backend.hs
  other-modules:     HTrade.Backend.Types, HTrade.Backend.ProxyLayer, HTrade.Backend.MarketFetch, HTrade.Backend.Configuration, HTrade.Backend.Storage
  ghc-options:       -O2 -Wall
  
  build-depends:     async == 2.0.*,
                     aeson == 0.6.*,
                     attoparsec == 0.10.*,
                     base == 4.*,
                     binary == 0.7.*,
                     bytestring >= 0.9.2.1 && < 0.11,
                     cassandra-cql == 0.3.*,
                     configurator == 0.2.*,
                     containers >= 0.4 && < 0.6,
                     directory == 1.2.*,
                     Decimal == 0.3.*,
                     errors == 1.4.*,
                     ghc-prim >= 0.2 && < 0.4,
                     lifted-async == 0.1.*,
                     monad-control == 0.3.*,
                     mtl == 2.1.*,
                     network == 2.4.*,
                     network-simple == 0.3.*,
                     pipes == 4.0.*,
                     pipes-binary == 0.2.*,
                     pipes-network == 0.6.*,
                     pipes-safe == 2.0.*,
                     pipes-concurrency == 2.0.*,
                     random == 1.0.*,
                     stm == 2.4.*,
                     text == 0.11.*,
                     time == 1.4.*,
                     transformers == 0.3.*,
                     transformers-base == 0.4.*,
                     uuid == 1.2.*,
                     vector == 0.10.*

executable htrade-proxy
  hs-source-dirs:    src
  main-is:           HTrade/Proxy/Main.hs
  other-modules:     HTrade.Proxy.Proxy
  ghc-options:       -O2 -Wall -threaded
  
  build-depends:     async == 2.0.*,
                     base == 4.*,
                     binary == 0.7.*,
                     bytestring >= 0.9.2.1 && < 0.11,
                     containers >= 0.4 && < 0.6,
                     errors == 1.4.*,
                     ghc-prim >= 0.2 && < 0.4,
                     http-streams == 0.6.*,
                     HsOpenSSL == 0.10.*,
                     http-streams == 0.6.*,
                     monad-control == 0.3.*,
                     monoid-statistics == 0.3.*,
                     mtl == 2.1.*,
                     network == 2.4.*,
                     pipes-concurrency == 2.0.*,
                     pipes == 4.0.*,
                     pipes-binary == 0.2.*,
                     pipes-network == 0.6.*,
                     pipes-safe == 2.0.*,
                     random == 1.0.*,
                     stm == 2.4.*,
                     time == 1.4.*,
                     transformers-base == 0.4.*

executable htrade-admin
  hs-source-dirs:    src
  main-is:           HTrade/Backend/Admin.hs
  other-modules:     HTrade.Backend.Storage
  ghc-options:       -O2 -Wall
  
  build-depends:     base == 4.*,
                     cassandra-cql == 0.3.*,
                     network == 2.4.*,
                     text == 0.11.*

-- Test suites

Test-Suite test-proxylayer
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src
  main-is:           HTrade/Test/TestProxyLayer.hs
  other-modules:     HTrade.Test.Utils
  ghc-options:       -O2 -threaded -Wall

                     
  build-depends:     aeson == 0.6.*,
                     async == 2.0.*,
                     attoparsec == 0.10.*,
                     base == 4.*,
                     binary == 0.7.*,
                     bytestring >= 0.9.2.1 && < 0.11,
                     cassandra-cql == 0.3.*,
                     containers >= 0.4 && < 0.6,
                     Decimal == 0.3.*,
                     errors == 1.4.*,
                     ghc-prim >= 0.2 && < 0.4,
                     http-streams == 0.6.*,
                     monad-control == 0.3.*,
                     monoid-statistics == 0.3.*,
                     mtl == 2.1.*,
                     network == 2.4.*,
                     network-simple == 0.3.*,
                     pipes == 4.0.*,
                     pipes-binary == 0.2.*,
                     pipes-concurrency == 2.0.*,
                     pipes-network == 0.6.*,
                     pipes-safe == 2.0.*,
                     QuickCheck == 2.6.*,
                     random == 1.0.*,
                     stm == 2.4.*,
                     time == 1.4.*,
                     transformers == 0.3.*,
                     transformers-base == 0.4.*,
                     vector == 0.10.*

Test-Suite test-configuration
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src
  main-is:           HTrade/Test/TestConfiguration.hs
  other-modules:     HTrade.Test.Utils
  ghc-options:       -O2 -threaded -Wall

  build-depends:     aeson == 0.6.*,
                     async == 2.0.*,
                     attoparsec == 0.10.*,
                     base == 4.*,
                     binary == 0.7.*,
                     bytestring >= 0.9.2.1 && < 0.11,
                     configurator == 0.2.*,
                     cassandra-cql == 0.3.*,
                     containers >= 0.4 && < 0.6,
                     Decimal == 0.3.*,
                     directory == 1.2.*,
                     errors == 1.4.*,
                     ghc-prim >= 0.2 && < 0.4,
                     http-streams == 0.6.*,
                     lifted-async == 0.1.*,
                     monad-control == 0.3.*,
                     mtl == 2.1.*,
                     monoid-statistics == 0.3.*,
                     network == 2.4.*,
                     network-simple == 0.3.*,
                     pipes == 4.0.*,
                     pipes-binary == 0.2.*,
                     pipes-network == 0.6.*,
                     pipes-safe == 2.0.*,
                     pipes-concurrency == 2.0.*,
                     QuickCheck == 2.6.*,
                     random == 1.0.*,
                     stm == 2.4.*,
                     temporary == 1.1.*,
                     text == 0.11.*,
                     time == 1.4.*,
                     transformers == 0.3.*,
                     transformers-base == 0.4.*,
                     uuid == 1.2.*,
                     vector == 0.10.*

source-repository head
  type: git
  location: https://github.com/davnils/htrade.git
